Unix format issue fix